<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout" >

    <RelativeLayout
        android:id="@+id/headbar_settings"
        style="@style/headbar_layout" >

        <TextView
            style="@style/headbar_textview"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_settings"
            android:textSize="17sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headbar_settings"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/rankList"
                style="@style/button_activity_edit"
                android:text="@string/rankList" />

            <Button
                android:id="@+id/statistics"
                style="@style/button_activity_edit"
                android:text="@string/statistics" />

            <Button
                android:id="@+id/upload"
                style="@style/button_activity_edit"
                android:text="@string/upload" />

            <Button
                android:id="@+id/update"
                style="@style/button_activity_edit"
                android:text="@string/update" />

            <Button
                android:id="@+id/feedback"
                style="@style/button_activity_edit"
                android:text="@string/feedback" />
            <Button
                android:id="@+id/volumeup"
                style="@style/button_activity_edit"
                android:text="@string/volumeup" />
            <Button
                android:id="@+id/volumedown"
                style="@style/button_activity_edit"
                android:text="@string/volumedown" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>