<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AlarmRingActivity" >

    <RelativeLayout
        android:id="@+id/headbar_edit_clock"
        style="@style/headbar_layout" >

        <TextView
            style="@style/headbar_textview"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_alarm_ring"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5" >

        <TextView
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:text="@string/slogan"
            android:textSize="100sp"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bt_background"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/getUp"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getUp" />

        <Button
            android:id="@+id/nap"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nap" />
    </LinearLayout>

</LinearLayout>